# HandwrAIter_Deprecated

./: README.md
Chaffee/Chaffee/: AppDelegate.swift  Bridging-Header.h  Extensions.swift  ViewController.swift
Chaffee/Chaffee.xcodeproj/: project.pbxproj
Chaffee/Chaffee.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Chaffee/Chaffee/Base.lproj/: Main.storyboard
Chaffee/Chaffee/Controllers/: RootViewController.swift
Chaffee/Chaffee/Foundations/: CallbackButton.swift  Extensions.swift
Chaffee/Chaffee/Models/: ServerSession.swift
Chaffee/Chaffee/WILLClasses/: DrawView.swift  Stroke.swift
Chaffee/ChaffeeTests/: ChaffeeTests.swift
Chaffee/ChaffeeUITests/: ChaffeeUITests.swift
Chaffee/WILLClasses/: DrawView.swift  Stroke.swift
server/: app.rb  app2.rb  app3.rb  c1.json  config.ru  cs.rb
server/nhocr/nhocr-0.21/: CHANGES  LICENSE  Makefile  Makefile.in  README  config.status  configure  configure.in
server/nhocr/nhocr-0.21/autom4te.cache/: output.1  traces.0  traces.1
server/nhocr/nhocr-0.21/dic/: Makefile
server/nhocr/nhocr-0.21/include/: Makefile  Makefile.am  Makefile.in
server/nhocr/nhocr-0.21/libnhocr/: Makefile  Makefile.am  Makefile.in  codelist.cpp  codelist.h  nhocr.h  nhrec.cpp  ocrbase.cpp
server/nhocr/nhocr-0.21/makechar/: Makefile  Makefile.in
server/nhocr/nhocr-0.21/makedic/: Makefile  Makefile.in
server/nhocr/nhocr-0.21/makevec/: Makefile  Makefile.in
server/nhocr/nhocr-0.21/nhocr/: Makefile  Makefile.am  Makefile.in  nhocr.cpp
server/nhocr/nhocr-0.21/test/: run-test
web/: index.html
web/assets/css/: main.css
(+6 files in other folders)
